--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">TPI </a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Proyectos</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#proyectos">Proyectos</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Acerca ..</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contactanos</a></li>
                     </ul>
@@ -31,7 +31,7 @@
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="" /><!-- Masthead Heading-->
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/logo.png" alt="" /><!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">TPI</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
@@ -62,7 +62,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="" />
+                            <img class="img-fluid" src="assets/img/proyecto/ambientacion.png" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -126,12 +126,12 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">La asignatura Taller de Proyectos Interdisciplinarios - TPI es parte del componente de formación disciplinar o profesional de los planes de estudio de los programas curriculares de pregrado de la Facultad de Ingeniería de la Universidad Nacional de Colombia..</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">Desarrollar en los estudiantes las habilidades para: abordar, contextualizar, formular e implementar un proyecto de manera interdisciplinar, mediante el trabajo en equipo, desde la perspectiva del pensamiento estratégico y crítico, brindando soluciones sustentables, pertinentes e innovadoras desde la disciplina de la ingeniería.</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/"><i class="fas fa-download mr-2"></i>Free Download!</a>
+                    <a class="btn btn-xl btn-outline-light" href="https://campus.virtual.unal.edu.co/"><i class="fas fa-download mr-2"></i>Moodle</a>
                 </div>
             </div>
         </section>
